--- a/requirements.txt
+++ b/requirements.txt
@@ -5,13 +5,13 @@ charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
 distro==1.8.0
-fastapi==0.104.1
+fastapi
 h11==0.14.0
 httpcore==1.0.2
 httptools==0.6.1
 httpx==0.25.2
 idna==3.6
-openai==1.3.5
+openai
 pydantic==2.5.2
 pydantic_core==2.14.5
 python-dotenv==1.0.0
