--- a/requirements.txt
+++ b/requirements.txt
@@ -7,23 +7,22 @@ colorama==0.4.6
 distro==1.8.0
 fastapi
 h11==0.14.0
-httpcore==1.0.2
-httptools==0.6.1
-httpx==0.25.2
-idna==3.6
+httpcore
+httptools
+httpx
+idna
 openai
-pydantic==2.5.2
-pydantic_core==2.14.5
-python-dotenv==1.0.0
-PyYAML==6.0.1
-requests==2.31.0
-setuptools==69.0.2
-sniffio==1.3.0
-starlette==0.27.0
-tqdm==4.66.1
-typing_extensions==4.8.0
-urllib3==2.1.0
+pydantic
+pydantic_core
+python-dotenv
+PyYAML
+requests
+setuptools
+sniffio
+starlette
+tqdm
+typing_extensions
+urllib3
 uvicorn==0.24.0.post1
-watchfiles==0.21.0
-websockets==12.0
-python==3.12.0
+watchfiles
+websockets
